--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -63,7 +63,7 @@ h1 li {
 
 #main-menu {
     color: white;
-    background-color: #ffd500;
+    background-color: #ddce49;
     position: relative;
 }
 
@@ -72,13 +72,13 @@ h1 li {
     width: 65%;
     font-weight: 700;
     font-size: 28px;
-    background-color: #008adb;
+    background-color: #55699a;
     border: 4px solid transparent;
 }
 
 #play {
     font-size: 38px;
-    background-color: #e3000b;
+    background-color: #f73918;
     border: 4px solid transparent;
 }
 
