--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -18,7 +18,7 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    display: flex;   /*none*/
+    display: flex;   
     align-items: center;
     justify-content: center;
     position: relative;
@@ -132,6 +132,7 @@ h1 li {
 
  #display-game{
      background-color: #ddce49;
+     display:flex;
  } 
 
 
