--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -147,8 +147,8 @@ h1 li {
     margin-left: 2px;
     margin-right: 3px;
     border: 3px solid  #ffffff;
-    background-color: #55699a;
-    /* background: url(../../images/pexeso.jpg) center center no-repeat; */
+    /* background-color: #55699a; */
+    background: url(../../images/pexesoCard.jpg) center center no-repeat;
     cursor: pointer;
     display: inline-block;
 }
