--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -156,7 +156,7 @@ h1 li {
 .card:hover {
     border: 3px solid #f73918;
 }
-
+/* 
 .cardA {
     width: 23%;
     height: 115px;
@@ -166,8 +166,52 @@ h1 li {
     cursor: default;
     pointer-events: none;
     display: inline-block;
-}
+} */
 
+
+
+.card {
+    position: relative;
+    /* display: flex; */
+    max-width: 100%; 
+    max-height: 100%;
+    transition: transform 300ms ease-in-out;
+  }
+  
+  /* transform specifies the degrees for turning the cards*/
+  .card-back {
+    transform: rotateY(0);
+  }
+  
+  .card-picture {
+    transform: rotateY(-180deg);
+  }
+  
+  .card.visible .card-back {
+    transform: rotateY(180deg);
+  }
+  
+  .card.visible .card-picture {
+    transform: rotateY(0);
+  }
+  
+  .card-picture {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    backface-visibility: hidden;
+    border-radius: 2px;
+  }
+  
+  .card-img,
+  .card-back {
+    max-width: 100px; 
+    max-height: 100px;
+  }
 
 
 
