Add random function for background color

--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -131,7 +131,7 @@ h1 li {
 /* display my pexeso game in game board */
 
  #display-game{
-     background-color: #ddce49;
+     /* background-color: #ddce49; */
      display:flex;
  } 
 
