--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -72,13 +72,13 @@ h1 li {
     width: 65%;
     font-weight: 700;
     font-size: 28px;
-    background-color: #55699a;
+    background-color: #9d8360;
     border: 4px solid transparent;
 }
 
 #play {
     font-size: 38px;
-    background-color: #f73918;
+    background-color: #a38c74;
     border: 4px solid transparent;
 }
 
@@ -144,53 +144,34 @@ h1 li {
 
 
 /* my cards */
-
-
-.card {
-    width: 23%;
-    height: 115px;
-    margin-left: 2px;
-    margin-right: 3px;
-    border: 3px solid  #ffffff;
-    /* background-color: #55699a; */
-    background: url(../../images/pexesoCard.jpg) center center no-repeat;
-    cursor: pointer;
-    display: inline-block;
-}
-
-.card:hover {
-    border: 3px solid #f73918;
-}
-
-
-
-
 .card {
     position: relative;
-    /* display: flex; */
+    display: flex;
     max-width: 100%; 
     max-height: 100%;
     transition: transform 300ms ease-in-out;
-  }
+    cursor: pointer;
+}
+
   
-  /* transform specifies the degrees for turning the cards*/
-  .card-back {
+/* transform specifies the degrees for turning the cards*/
+.card-back {
     transform: rotateY(0);
-  }
+}
   
-  .card-picture {
+.card-picture {
     transform: rotateY(-180deg);
-  }
-  
-  .card.visible .card-back {
+}
+
+.card.visible .card-back {
     transform: rotateY(180deg);
-  }
-  
-  .card.visible .card-picture {
+}
+
+.card.visible .card-picture {
     transform: rotateY(0);
-  }
-  
-  .card-picture {
+}
+
+.card-picture {
     display: flex;
     position: absolute;
     width: 100%;
@@ -200,13 +181,55 @@ h1 li {
     overflow: hidden;
     backface-visibility: hidden;
     border-radius: 2px;
-  }
-  
-  .card-img,
-  .card-back {
+}
+
+.card-img,
+.card-back {
     max-width: 100px; 
     max-height: 100px;
-  }
+}
+/* 
+.board-grid {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
+    margin: 10%;
+    justify-content: center;
+    perspective: 500px;
+} */
+/* 
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
+    margin: 10%;
+    justify-content: center;
+    perspective: 500px;
+
+} */
 
 
+#grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows:  repeat(2, 1fr);
+    grid-gap: 2vh 2vw;
+    align-items: center;
+    justify-content: center;
+    max-width: 100vh;
+    max-height: calc(54vh + 10%);
+}
 
+
+.card {
+height: 13vh;
+width: 13vh;
+color: white;
+perspective: 1000px;
+cursor: pointer;
+}
+
+.card-img, .card-back {
+max-width: unset;
+/* max-height: unset; */
+}
