--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -233,3 +233,50 @@ cursor: pointer;
 max-width: unset;
 /* max-height: unset; */
 }
+
+/*iPhone*/
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .card {
+        height: 15vh;
+        width: 13vh;
+        color: white;
+        perspective: 1000px;
+        cursor: pointer;
+        }
+    
+#grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows:  repeat(2, 1fr);
+    grid-gap: 0vh 1vw;
+    align-items: center;
+    justify-content: center;
+    max-width: 100vh;
+    max-height: calc(54vh + 10%);
+}    
+
+}
+
+/* iPad */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .card {
+        height: 15vh;
+        width: 13vh;
+        color: white;
+        perspective: 1000px;
+        cursor: pointer;
+        }
+     
+.card-img, .card-back {
+    max-width: unset;
+    max-height: unset;
+    }
+
+}
