--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -8,7 +8,6 @@ body {
     background-color: #292929;
 }
 
-
 /* ------------------- Main menu section ------------------- */
 
 #main-menu-section {
@@ -23,7 +22,6 @@ body {
     justify-content: center;
     position: relative;
 }
-
 
 .opaque-overlay {
     position: absolute;
@@ -93,8 +91,6 @@ h1 li {
     text-align: center;
 }
 
-/* Easy and hard section */
-
 .modal-content{
     background-color: #ddce49;
     color: black;
@@ -127,11 +123,7 @@ h1 li {
     border: 3px solid #ffffff;
 }
 
-
-/* display my pexeso game in game board */
-
  #display-game{
-     /* background-color: #ddce49; */
      display:none;
  } 
 
@@ -140,7 +132,6 @@ h1 li {
      border-color: antiquewhite;
  }
 
-/* my cards */
 .card {
     position: relative;
     display: flex;
@@ -150,8 +141,6 @@ h1 li {
     cursor: pointer;
 }
 
-  
-/* transform specifies the degrees for turning the cards*/
 .card-back {
     transform: rotateY(0);
 }
@@ -211,11 +200,7 @@ max-width: unset;
 }
 
 /*iPhone*/
-
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-width: 320px) {
     .card {
         height: 15vh;
         width: 13vh;
@@ -248,10 +233,7 @@ max-width: unset;
 }
 
 /* iPad */
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-width: 768px) {
     .card {
         height: 15vh;
         width: 13vh;
