--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -202,7 +202,7 @@ max-width: unset;
 /*iPhone*/
 @media only screen and (min-width: 320px) {
     .card {
-        height: 15vh;
+        /* height: 15vh; */
         width: 13vh;
         color: white;
         perspective: 1000px;
@@ -227,13 +227,13 @@ max-width: unset;
     text-align: center;
     top:15%;
     left:15%;
-    display:none;
+    /* display:none; */
 }  
 
 }
 
 /* iPad */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
     .card {
         height: 15vh;
         width: 13vh;
